the editor when changes are made.
+Fixed some layout issues with the update checker/downloader
+Fixed code folding for Pascal and Shell script files
+Fixed Editra Style Sheet parser error for style sheets that have Windows eol
characters in them.
+Fixed flickering of toolbar when changing icon themes
+Don't send clipboard events to text control when it is not the control with the
capture.

#-----------------------------------------------------------------------------#

VERSION 0.2.0
DATE 09/29/2007
6th Alpha Release

NEWS:
This is the second major alpha release of Editra. It introduces a number of new 
features to the editor, the biggest change being that having multiple top level 
windows running under a single instance is now supported. In addition to the 
enhancements there have been a fair number bug fixes, thanks again to all who 
reported errors. More details can be viewed in the below changelog.

NEW: [features/improvements]
+Opening multiple toplevel windows is now possible
+Tabs can be dragged between windows
+Command Mode for sending commands to the editor, when using Vi emulation it
acts like an Ex command mode. (see documentation page for description of
available commands)
+Faster file loading
+Bidirectional Text Search
+Some performance improvements for text input speed
+Highlighting support for (Apache Config files, ini files, Erlang)
+Link to project documentation and help guides in Help Menu
+Shortcut to close quick find bar (ESC will now hide the bar)
+Command bar now automatically hides it self after most actions
+Improvements to the Style Editor
+Updates to all plugins to work with multiple windows
+Theme system extended to all program icons
+New icon theme available, derived from the Tango icon set (http://tango.freedesktop.org)
+Improved file encoding detection and unicode handling
+Shelf visibility can be toggled with Ctrl+Alt+S
+Shelf Items are automatically assigned hotkeys Ctrl+Alt+(0-9)
+Added Abort button to the Error Reporter